WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243348
Fix missing exception check in JSGenericTypedArrayViewPrototypeFunctions.h's speciesConstruct().
https://bugs.webkit.org/show_bug.cgi?id=243348
Summary
Fix missing exception check in JSGenericTypedArrayViewPrototypeFunctions.h's ...
Mark Lam
Reported
2022-07-29 10:32:34 PDT
This issue was showing up as unchecked exception errors when running the JSC stress tests.
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2022-07-29 10:36:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2854
EWS
Comment 2
2022-07-29 10:43:37 PDT
Committed
252954@main
(6a7774646654): <
https://commits.webkit.org/252954@main
> Reviewed commits have been landed. Closing PR #2854 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-07-29 10:44:16 PDT
<
rdar://problem/97793325
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug