Fix missing exception check in JSGenericTypedArrayViewPrototypeFunctions.h's speciesConstruct(). https://bugs.webkit.org/show_bug.cgi?id=243348

Reviewed by Yusuke Suzuki.

This issue was showing up as unchecked exception errors when doing Debug build JSC stress test runs.

* Source/JavaScriptCore/runtime/JSGenericTypedArrayViewPrototypeFunctions.h:
(JSC::speciesConstruct):

Canonical link: https://commits.webkit.org/252954@main